# runetastatur

./: LanguageSpecificKeyboardDocumentation.jspwiki  Makefile.am  NorskeRuner.keylayout  Plan.txt  autogen.sh  configure.ac
nno/: nno-mob.yaml  nno-mobile.yaml  nno-win.yaml  nno.yaml  nno_Runr-macos.yaml  nno_Runr-mob.yaml  nno_Runr-mobile.yaml  nno_Runr-win.yaml  project.yaml
nno/doc/: NorskeRuner.icns  Plan.jspwiki  Plan.txt  Runeprøver.pages
